# Log-Anomaly-Detection-System

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: anomaly_api.py  anomaly_api_chronicle.py
batch/: batch_processor.py
chronicle/: google_chronicle_integration.py
common/: config.py  sanitize.py  security.py  threats.py
config/: requirements.txt  requirements_api.txt  requirements_chronicle.txt  requirements_full.txt  requirements_minimal.txt
core/: autoencoder.py  chat_anomaly_detector.py  chat_feature_pipeline.py  chat_training_data.json  generate_chat_training_data.py  intrusion_detection_pipeline.py  log_anomaly_detection_lite.py  train_chat_classifier.py
docker/: Dockerfile  docker-compose.yml
docs/: executive-summary.md  usage-guide.md
docs/superpowers/plans/: 2026-04-01-codebase-hardening.md
docs/superpowers/specs/: 2026-04-01-codebase-hardening-design.md
mcp/: anomaly_mcp_server.py
tests/: conftest.py  test_api.py  test_autoencoder.py  test_batch.py  test_chat_classifier.py  test_config.py  test_core.py  test_mcp.py  test_sanitize.py  test_security.py  test_threats.py
